k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clinic-appointment-system
  namespace: clinic
  labels:
    app: clinic-appointment-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clinic-appointment-system
  template:
    metadata:
      labels:
        app: clinic-appointment-system
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: clinic-appointment-system
          # amazonq-ignore-next-line
          image: mhabdelkader/clinic-app:latest   # Jenkins will later set :<BUILD_NUMBER>
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8090
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8090
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8090
            initialDelaySeconds: 30
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
